examples/test/testpolicy12026.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy12026
  namespace: namespace310
spec:
  podSelector:
    matchLabels:
      key31: value5
      key28: value28
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key33: value22
      podSelector:
        matchLabels:
          key6: value48
          key16: value1
